--- a/netlify.toml
+++ b/netlify.toml
@@ -11,6 +11,13 @@
   status = 200
 
 [[redirects]]
+  from = "/wger/*"
+  to = "https://wger.de/:splat"
+  status = 200
+  force = true
+  headers = {Access-Control-Allow-Origin = "*"}
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
