--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,7 @@
 
 [functions]
   directory = "netlify/functions"
+  included_files = ["netlify/lib/**", "src/data/**"]
 
 [[redirects]]
   from = "/api/*"
